--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: buttons;
-    src: url(NanumMyeongjo-Regular.ttf);
+    font-family: 'Balsamiq-sans';
+    src: url(Balsamiq_Sans/BalsamiqSans-Regular.ttf);
 }
 
 body
 {
- 	background: linear-gradient(270deg, #4bd3ff, #ff8585, #8598ff);
+	background: linear-gradient(270deg, #409bf0, #ff8585, #8598ff);
 	background-size: 600% 600%;
 
 	-webkit-animation: AnimationName 30s ease infinite;
@@ -53,7 +53,7 @@ body
 
 #clock-box
 {
-	font-family:"iosevka";
+	font-family:"Balsamiq-sans";
 	font-size:70px;
 	text-align:center;
 	color:white;
@@ -64,9 +64,10 @@ body
 	text-align:center;
 	background-color:rgb(255, 255, 255);
 	width:300px;
+	font-family: 'Balsamiq-sans';
 	height:385px;
 	margin:100px auto;
-	border-radius:20px;
+	border-radius:25px;
 	box-shadow: 0 0 100px 5px rgba(0,0,0,0.2);
 	overflow:hidden;
 
@@ -84,9 +85,9 @@ body
 {
 	width:100%;
 	margin-top:20px;
-	font-family:"ubuntu";
-	font-size: 15px;
-	color:#FF7878;
+	font-family:'Balsamiq-sans';
+	font-size: 14px;
+	color:#ff6f6f;
 	/*
 	Error
 	color:#FF1919;
@@ -121,7 +122,7 @@ body
 #next
 {
 	color:#ffffff;
-	font-family:"buttons";
+	font-family:"Balsamiq-sans";
 }
 
 #last:hover,
@@ -156,7 +157,7 @@ body
 	margin-left: -31px;
     text-align: left;
     width: 200%;
-    font-family: "ubuntu";
+    font-family: "Balsamiq-sans";
     font-size: 15px;
     color: #999;
     /* margin-bottom: 13px; */
@@ -201,31 +202,31 @@ body
 	height:20px;
 	font-size:15px;
 	border:1px solid #f5f5f5;
-	border-radius:10px;
+	border-radius:15px;
 	text-align: center;
-}
 }
 
 #login-password::-webkit-input-placeholder {
-    font-family: 'iosevka';
+    font-family: 'Balsamiq-sans';
+	color: #b4b4b4;
 }
 
 #login-password:-ms-input-placeholder {
-    font-family: 'iosevka';
+    font-family: 'Balsamiq-sans';
 }
 
 #login-password:-moz-placeholder {
-    font-family: 'iosevka';
+    font-family: 'Balsamiq-sans';
 }
 
 #login-password::-moz-placeholder {
-    font-family: 'iosevka';
+    font-family: 'Balsamiq-sans';
 }
 
 #login-name:hover,
 #login-password:hover
 {
-	border:1px solid #d5d5d5;
+	border:1px solid #e0e0e0;
 	outline:none;
 }
 
@@ -244,18 +245,17 @@ body
 	position:relative;
 	/* top:-15px; */
 	outline:0;
-	font-family: 'iosevka';
-	font-size:15px;
+	font-family: 'Balsamiq-sans';
+	font-weight: 900;
+	font-size:14px;
 	margin-top:5px;
-	/*background-color:#ffa1a1; */
 	color:white;
 	border:0.5px solid #ffffff;
 	padding:5px;
-	border-radius:5px;
+	border-radius:15px;
 	width:100%;
 	height:40px;
-	background: linear-gradient(270deg, #4bd3ff, #ff8585, #8598ff);
-    /* background-size: auto auto; */
+	background: linear-gradient(270deg, #409bf0, #ff8585, #8598ff);
 	-webkit-animation: AnimationName 30s ease infinite;
 	-moz-animation: AnimationName 30s ease infinite;
 	animation: AnimationName 30s ease infinite;
