--- a/static/style.css
+++ b/static/style.css
@@ -201,8 +201,9 @@ body
 	width:93.5%;
 	height:20px;
 	font-size:15px;
-	border:1px solid #f5f5f5;
+	border:1px solid #e2e1e1;
 	border-radius:15px;
+
 	text-align: center;
 }
 
@@ -235,7 +236,7 @@ body
 #login-password:focus, 
 #login-password:active
 {
-	border: 1px solid #ff7c7c;
+	border: 1px solid #cacaca;
 	box-shadow: inset 0 1px 2px rgba(255, 140, 140, 0.3);
 	outline: none;
 }
